@@ -1,3 +1,6 @@
+Jan 20, 2021
+  -removed code to parse UniGene Ids (UniGene database discontinued at NCBI in 2019)
+
 Nov 06, 2020
   -fixed conf to load map positions for molerat
 
